# norlab_icp_mapper_ros

./: CMakeLists.txt  README.md  package.xml
launch/: config.yaml  mapping.launch.yaml
msg/: State.msg
src/: Mapper.cpp  Mapper.h  NodeParameters.cpp  NodeParameters.h  Trajectory.cpp  Trajectory.h  mapper_node.cpp  point_cloud_assembler.cpp
srv/: LoadMap.srv  SaveMap.srv  SaveTrajectory.srv
